--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -64,7 +64,8 @@
 
       <LinearLayout
         android:background="#dadada"
-        android:layout_width="match_parent" android:layout_height="1dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
 
       <!-- 광고이미지 -->
       <ImageButton
