--- a/app/src/main/res/layout/item_array_text.xml
+++ b/app/src/main/res/layout/item_array_text.xml
@@ -6,7 +6,7 @@
 
   <kr.puzi.puzi.ui.customview.NotoTextView
     app:fontWeight="demilight"
-    android:text="TextView"
+    android:text=""
     android:layout_marginLeft="21dp"
     android:layout_marginRight="21dp"
     android:layout_marginTop="7dp"
