--- a/app/src/main/res/layout/item_store_brand_single.xml
+++ b/app/src/main/res/layout/item_store_brand_single.xml
@@ -16,7 +16,7 @@
 
   <kr.puzi.puzi.ui.customview.NotoTextView
     app:fontWeight="regular"
-    android:text="TextView"
+    android:text="="
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="12dp"
