--- a/app/src/main/res/layout/item_store_item.xml
+++ b/app/src/main/res/layout/item_store_item.xml
@@ -24,7 +24,7 @@
 
     <kr.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="regular"
-      android:text="itemName"
+      android:text=""
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
@@ -35,7 +35,7 @@
       android:id="@+id/tv_store_item_name"/>
 
     <kr.puzi.puzi.ui.customview.RobotoTextView
-      android:text="price"
+      android:text=""
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
