--- a/app/src/main/res/layout/activity_advertisement_detail.xml
+++ b/app/src/main/res/layout/activity_advertisement_detail.xml
@@ -120,7 +120,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:id="@+id/tv_ad_quiz"
-            android:text="광고의 할인하는 상품명은?"
+            android:text=""
             android:textColor="#333333"
             android:textSize="20dp"
             android:gravity="left"
@@ -156,7 +156,7 @@
           android:orientation="horizontal">
 
           <kr.puzi.puzi.ui.customview.NotoButton
-            android:text="취소"
+            android:text="@string/cancel"
             android:textColor="#6d6d6d"
             android:id="@+id/tv_ad_answer_first"
             android:background="@drawable/button_ad_answer"
@@ -166,7 +166,7 @@
             android:layout_marginRight="22.5dp"/>
 
           <kr.puzi.puzi.ui.customview.NotoButton
-            android:text="확인"
+            android:text="@string/confirm"
             android:textColor="#6d6d6d"
             android:id="@+id/tv_ad_answer_second"
             android:background="@drawable/button_ad_answer"
