--- a/app/src/main/res/layout/activity_channel_filter.xml
+++ b/app/src/main/res/layout/activity_channel_filter.xml
@@ -10,7 +10,9 @@
     android:layout_height="match_parent">
     <LinearLayout
       android:background="#ffffff"
-      android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
 
       <LinearLayout
         android:orientation="horizontal"
@@ -121,7 +123,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:textColor="#333333" android:id="@+id/textView3" android:layout_weight="1"/>
+        android:textColor="#333333"
+        android:id="@+id/textView3"
+        android:layout_weight="1"/>
 
       <LinearLayout
         android:layout_gravity="center_horizontal"
@@ -225,7 +229,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:textColor="#333333" android:id="@+id/textView2"/>
+        android:textColor="#333333"
+        android:id="@+id/textView2"/>
 
       <LinearLayout
         android:orientation="horizontal"
@@ -265,7 +270,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:layout_height="54dp" android:layout_weight="1">
+        android:layout_height="54dp"
+        android:layout_weight="1">
 
         <kr.puzi.puzi.ui.customview.NotoButton
           app:fontWeight="regular"
