--- a/app/src/main/res/layout/activity_editors_page_webview.xml
+++ b/app/src/main/res/layout/activity_editors_page_webview.xml
@@ -78,7 +78,8 @@
 
       <LinearLayout
         android:layout_weight="1"
-        android:layout_width="0dp" android:layout_height="match_parent"/>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
 
       <ImageButton
         android:layout_width="40dp"
@@ -93,7 +94,8 @@
 
       <LinearLayout
         android:layout_weight="1"
-        android:layout_width="0dp" android:layout_height="match_parent"/>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
 
       <ImageButton
         android:layout_width="40dp"
@@ -108,10 +110,12 @@
 
       <LinearLayout
         android:layout_weight="1"
-        android:layout_width="0dp" android:layout_height="match_parent"/>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
 
       <LinearLayout
-        android:layout_width="40dp" android:layout_height="match_parent"/>
+        android:layout_width="40dp"
+        android:layout_height="match_parent"/>
 
     </LinearLayout>
 
