--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -29,7 +29,7 @@
         android:textSize="30dp"
           android:textColor="@color/colorWhite"
           android:id="@+id/tv_question_q"
-        android:text="지금 당신의 기분은 ?"
+        android:text=""
         android:gravity="center"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
