--- a/app/src/main/res/layout/activity_store_challenge.xml
+++ b/app/src/main/res/layout/activity_store_challenge.xml
@@ -50,7 +50,8 @@
         android:layout_marginTop="17dp"
         android:layout_marginBottom="17dp"
         android:orientation="horizontal"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
           android:layout_marginLeft="17dp"
