--- a/app/src/main/res/layout/activity_store_purchase.xml
+++ b/app/src/main/res/layout/activity_store_purchase.xml
@@ -77,7 +77,7 @@
 
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
-            android:text="TextView"
+            android:text=""
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
 
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
-            android:text="TextView"
+            android:text=""
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -131,7 +131,7 @@
                 android:textSize="15dp"
                 android:textColor="#333333"
                 android:gravity="center"
-                android:text="1"
+                android:text=""
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
@@ -186,7 +186,7 @@
 
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
-              android:text="text"
+              android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:textSize="12dp"
@@ -217,7 +217,7 @@
 
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
-              android:text="TextView"
+              android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:textSize="12dp"
