--- a/app/src/main/res/layout/item_coupon_used_child.xml
+++ b/app/src/main/res/layout/item_coupon_used_child.xml
@@ -31,7 +31,7 @@
 
       <kr.puzi.puzi.ui.customview.NotoTextView
         app:fontWeight="regular"
-        android:text="itemName"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -42,7 +42,7 @@
         android:id="@+id/tv_used_coupon_name"/>
 
       <kr.puzi.puzi.ui.customview.RobotoTextView
-        android:text="price"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
