--- a/app/src/main/res/layout/activity_store_challenge_detail.xml
+++ b/app/src/main/res/layout/activity_store_challenge_detail.xml
@@ -147,7 +147,7 @@
             android:layout_marginLeft="17dp"
             android:textSize="17dp"
             android:textColor="#333333"
-            android:text="배 확률 상승 아이템 "
+            android:text="3배 확률 상승 아이템 "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
