--- a/app/src/main/res/layout/activity_store_purchase.xml
+++ b/app/src/main/res/layout/activity_store_purchase.xml
@@ -131,7 +131,7 @@
                 android:textSize="15dp"
                 android:textColor="#333333"
                 android:gravity="center"
-                android:text=""
+                android:text="1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
